third_party/move/move-compiler-v2/tests/checking/friends/v1-tests/friend_decl_unbound_module.exp

Diagnostics:
error: unbound module `0x42::Nonexistent` in friend declaration
  ┌─ tests/checking/friends/v1-tests/friend_decl_unbound_module.move:3:5
  │
3 │     friend 0x42::Nonexistent;
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^
